# compare-dir

./: .gitignore  Cargo.toml  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: rust-ci.yml  rust-publish.yml
scripts/: precommit.sh
src/: column_formatter.rs  dir_comparer.rs  file_comparer.rs  file_filter.rs  file_hash_cache.rs  file_hasher.rs  file_item.rs  file_iterator.rs  lib.rs  main.rs  progress.rs  progress_reporter.rs  sort_stream.rs  system_time_ext.rs
src/compare_dir/: __init__.py  compare_dir.py  comparer.py  directory_comparer.py
