[package]
name = "compare-dir"
version = "0.9.4"
edition = "2024"
rust-version = "1.88"
description = "A high-performance directory comparison tool and library"
authors = ["Koji Ishii <kojiishi@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/kojiishi/compare-dir"
documentation = "https://docs.rs/compare-dir/"
readme = "README.md"
keywords = ["directory", "comparison", "diff", "parallel"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".github", ".gitignore", ".vscode", "Taskfile.yml"]

[dependencies]
anyhow = "1.0"
blake3 = "1.8.5"
clap = { version = "4.6", features = ["derive"] }
env_logger = "0.11"
globset = "0.4"
indicatif = "0.18"
indicatif-log-bridge = "0.2.3"
log = "0.4"
memmap2 = "0.9.10"
rayon = "1.12"
simple-path = "0.3.0"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.10"
